overlays/beta/rollout-patch.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: banana
  namespace: banana
spec:
  replicas: 2
  containers:
        - name: banana
          image: 624577703989.dkr.ecr.ap-northeast-1.amazonaws.com/hackathon:20251108045144
