overlays/beta/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banana-ingress
spec:
  rules:
    - host: beta.gyungdal.cc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banana-ingress-preview
spec:
  rules:
    - host: rollouts-test-preview.beta.gyungdal.cc
